--- a/ego-facebook/question1.ipynb
+++ b/ego-facebook/question1.ipynb
@@ -2,32 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "source": [
     "# pip install networkx\r\n",
     "import networkx as nx\r\n",
     "import matplotlib.pyplot as plt\r\n",
     "\r\n",
-    "\r\n",
     "G = nx.read_edgelist('facebook_combined.txt', create_using = nx.Graph(), nodetype = int)\r\n",
     "\r\n",
-    "\r\n",
+    "#number of nodes and edges in the orignal network\r\n",
     "print(f'Number of Nodes: {G.number_of_nodes()}')\r\n",
     "print(f'Number of Edges: {G.number_of_edges()}')\r\n",
     "\r\n",
-    "# to_del = [n for n in G if n%3==0]\r\n",
-    "# G.remove_nodes_from(to_del)\r\n",
-    "# print(G.number_of_nodes())\r\n",
-    "# print(G.number_of_edges())\r\n",
-    "\r\n",
-    "# pos = nx.spring_layout(G)\r\n",
-    "# nx.draw_networkx(G, pos=pos, with_labels=False,\r\n",
-    "#                  node_color=\"red\",\r\n",
-    "#                  node_size=10 )\r\n",
-    "# plt.axis('off')\r\n",
-    "\r\n",
-    "\r\n",
-    "\r\n"
+    "#number of nodes and edges in the network \r\n",
+    "#after removing nodes with IDs divisible by 3\r\n",
+    "to_del = [n for n in G if n%3==0]\r\n",
+    "G.remove_nodes_from(to_del)\r\n",
+    "print(G.number_of_nodes())\r\n",
+    "print(G.number_of_edges())"
    ],
    "outputs": [
     {
@@ -35,7 +27,9 @@
      "name": "stdout",
      "text": [
       "Number of Nodes: 4039\n",
-      "Number of Edges: 88234\n"
+      "Number of Edges: 88234\n",
+      "2692\n",
+      "39116\n"
      ]
     }
    ],
@@ -43,42 +37,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "source": [
-    "len(list(nx.articulation_points(G)))"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "source": [
+    "#nodes with highest degree\r\n",
     "high_degree  =0\r\n",
     "for node in G.nodes():\r\n",
     "    high_degree  = max(high_degree, G.degree[node])\r\n",
-    "print(high_degree)\r\n",
+    "\r\n",
     "high_degree_nodes = [node for (node, val) in G.degree() if G.degree[node] == high_degree]\r\n",
-    "print(high_degree_nodes)"
+    "print(\"node IDs with the highest degree: \",high_degree_nodes)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1045\n",
-      "[107]\n"
+      "node IDs with the highest degree:  [107]\n"
      ]
     }
    ],
@@ -86,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "source": [
     "G_di = nx.read_edgelist('facebook_combined.txt', create_using = nx.DiGraph(), nodetype = int)\r\n",
     "\r\n",
@@ -102,6 +76,55 @@
      "text": [
       "4039\n",
       "1\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "source": [
+    "components = nx.connected_components(G)\r\n",
+    "largest_component = max(components, key=len)\r\n",
+    "subgraph = G.subgraph(largest_component)\r\n",
+    "\r\n",
+    "#fraction of nodes in the largest connected component\r\n",
+    "fraction = subgraph.number_of_nodes()/(G.number_of_nodes())\r\n",
+    "print(\"Fraction of nodes in the largest connected component: \", fraction)\r\n",
+    "\r\n",
+    "#number of articulation points\r\n",
+    "print(\"Number of articulation points: \",len(list(nx.articulation_points(G))))\r\n",
+    "\r\n",
+    "#number of connected components\r\n",
+    "print(\"Number of connected components: \",nx.number_connected_components(G))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Fraction of nodes in the largest connected component:  0.9684249628528975\n",
+      "Number of articulation points:  26\n",
+      "Number of connected components:  37\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "source": [
+    "diameter = nx.diameter(subgraph)\r\n",
+    "print(\"Network diameter of largest component: \", diameter)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Network diameter of largest component:  14\n"
      ]
     }
    ],
