--- a/email-data/question2.ipynb
+++ b/email-data/question2.ipynb
@@ -2,30 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "source": [
     "import networkx as nx\r\n",
     "import matplotlib.pyplot as plt\r\n",
     "\r\n",
-    "\r\n",
     "G = nx.read_edgelist('email_core.txt', create_using = nx.Graph(), nodetype = int)\r\n",
     "\r\n",
-    "\r\n",
-    "print(f'Number of nodes: {G.number_of_nodes()}')\r\n",
-    "print(f'Number of edges: {G.number_of_edges()}')\r\n",
-    "\r\n",
-    "nodes_with_degree_four = [val for (nodeID,val) in G.degree() if val==4]\r\n",
-    "print(f'Number of nodes with degree 4: {len(nodes_with_degree_four)}')\r\n",
-    "\r\n",
-    "print(f'Average clustering coefficient : {nx.average_clustering(G)}') \r\n",
-    "\r\n",
-    "number_of_triangles = int(sum(nx.triangles(G).values()) / 3)\r\n",
-    "print(f'Number of triangles: {number_of_triangles}')\r\n",
-    "\r\n",
-    "edge_bridges = list(nx.bridges(G))\r\n",
-    "print(f'Number of edge bridges: {len(edge_bridges)}')\r\n",
-    "\r\n",
-    "\r\n"
+    "#number of nodes and edges \r\n",
+    "print('Number of nodes:',G.number_of_nodes())\r\n",
+    "print('Number of edges:', G.number_of_edges())"
    ],
    "outputs": [
     {
@@ -33,11 +19,7 @@
      "name": "stdout",
      "text": [
       "Number of nodes: 1005\n",
-      "Number of edges: 16706\n",
-      "Number of nodes with degree 4: 33\n",
-      "Average clustering coefficient : 0.3993549664221539\n",
-      "Number of triangles: 105461\n",
-      "Number of edge bridges: 95\n"
+      "Number of edges: 16706\n"
      ]
     }
    ],
@@ -45,22 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "source": [
-    "G_di = nx.read_edgelist('email_core.txt', create_using = nx.DiGraph(), nodetype = int)\r\n",
-    "\r\n",
-    "scc = nx.number_strongly_connected_components(G_di)\r\n",
-    "wcc = nx.number_weakly_connected_components(G_di)\r\n",
-    "print(scc)\r\n",
-    "print(wcc)"
+    "#nodes with degree 4\r\n",
+    "nodes_with_degree_four = [val for (nodeID,val) in G.degree() if val==4]\r\n",
+    "print('Number of nodes with degree 4:',len(nodes_with_degree_four))"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "203\n",
-      "20\n"
+      "Number of nodes with degree 4: 33\n"
      ]
     }
    ],
@@ -68,34 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "source": [
-    "components = nx.connected_components(G)\r\n",
-    "largest_component = max(components, key=len)\r\n",
-    "\r\n",
-    "subgraph = G.subgraph(largest_component)\r\n",
-    "diameter = nx.diameter(subgraph)\r\n",
-    "fraction = subgraph.number_of_nodes()/(G.number_of_nodes())\r\n",
-    "\r\n",
-    "print(\"Fraction of nodes in largest component\", fraction)\r\n",
-    "print(\"Network diameter of largest component:\", diameter)\r\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Fraction of nodes in largest component 0.981094527363184\n",
-      "Network diameter of largest component: 7\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "source": [
+    "#degree distribution plot\r\n",
     "degree_freq = nx.degree_histogram(G)\r\n",
     "degrees = range(len(degree_freq))\r\n",
     "plt.figure(figsize=(12, 8)) \r\n",
@@ -117,6 +70,83 @@
      "metadata": {
       "needs_background": "light"
      }
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "source": [
+    "G_di = nx.read_edgelist('email_core.txt', create_using = nx.DiGraph(), nodetype = int)\r\n",
+    "\r\n",
+    "#number of nodes and edges in largest weakly connected component\r\n",
+    "largest_wcc = max(nx.weakly_connected_components(G_di), key=len)\r\n",
+    "subgraph_largest_wcc = G.subgraph(largest_wcc)\r\n",
+    "print(\"Number of nodes in largest_wcc: \",subgraph_largest_wcc.number_of_nodes())\r\n",
+    "print(\"Number of edges in largest_wcc: \",subgraph_largest_wcc.number_of_edges())"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Number of nodes in largest_wcc:  986\n",
+      "Number of edges in largest_wcc:  16687\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "source": [
+    "#number of nodes and edges in largest strongly connected component\r\n",
+    "largest_scc = max(nx.strongly_connected_components(G_di), key=len)\r\n",
+    "subgraph_largest_scc = G.subgraph(largest_scc)\r\n",
+    "print(\"Number of nodes in largest_scc: \",subgraph_largest_scc.number_of_nodes())\r\n",
+    "print(\"Number of edges in largest_scc: \",subgraph_largest_scc.number_of_edges())"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Number of nodes in largest_scc:  803\n",
+      "Number of edges in largest_scc:  15864\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "source": [
+    "#average clustering coefficient\r\n",
+    "print('Average clustering coefficient:', nx.average_clustering(G)) \r\n",
+    "\r\n",
+    "#number of triangles\r\n",
+    "number_of_triangles = int(sum(nx.triangles(G).values()) / 3)\r\n",
+    "print('Number of triangles:',number_of_triangles)\r\n",
+    "\r\n",
+    "#number of rectangles - in progress\r\n",
+    "\r\n",
+    "\r\n",
+    "#number of edge bridges\r\n",
+    "edge_bridges = list(nx.bridges(G))\r\n",
+    "print(f'Number of edge bridges: {len(edge_bridges)}')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Average clustering coefficient: 0.3993549664221539\n",
+      "Number of triangles: 105461\n",
+      "Number of edge bridges: 95\n"
+     ]
     }
    ],
    "metadata": {}
